styles/typography.css
/* ... */
dl dl, ol ol, ol ul, ul ol, ul ul {
  margin-bottom: var(--margin-collapse-bugfix);
  width: auto;
}
nav > details > ul {}
dt {
  font-weight: bolder;
  line-height: 3.6182ch;
  padding: var(--margin-collapse-bugfix) 1ch;
  margin: 0.6182ch 0 var(--margin-collapse-bugfix);
}
li {}
dd {}
dd, li {
  margin: var(--margin-collapse-bugfix) auto 0;
  padding: var(--margin-collapse-bugfix) 0.6182ch;
  line-height: calc( var(--line-height) * var(--GOLDEN-RATIO) * 0.8 );
}
dd, li li {
  font-size: var(--smaller);
}
dd dd:first-of-type, li li:first-of-type {}
nav li, nav li {}
nav dd, nav li li { font-size: 1em }
nav dt + dd, nav li li:first-of-type
  { margin-top: 0 }
details > dl, details > dd,
details > ol li, details > ul li {}

abbr { /* http://webtypography.net/3.2.2 */
  font-style: normal;
  font-variant-numeric: oldstyle-nums;
}
abbr[title] {
  border-bottom: 0;
  text-decoration-skip-ink: none;
  text-decoration: underline dotted;
}

del, s {
  opacity: 0.618;
  text-decoration: line-through;
  text-decoration-style: wavy
}
del { text-decoration-color: ActiveText }
ins { text-decoration-color: HighlightText }

del::before
  { content: '−' /* https://en.wikipedia.org/wiki/Dash */ }

ins::before
  { content: '+' }

em { /* https://developer.mozilla.org/en-US/docs/Web/CSS/text-emphasis */
  display: contents;
  padding-inline: calc(.1682ch * var(--GOLDEN-RATIO));
}
b, strong
  { font-weight: bolder }
b {}
p, q, address {
  max-width: 80ch;
  text-align: start;
  padding: var(--margin-collapse-bugfix) var(--line-height);
  margin: var(--margin-collapse-bugfix) auto var(--line-height);
}
p {
  display: flow-root; /* https://css-tricks.com/display-flow-root */
  /* https://edgee.net/what-font-size-should-you-use-for-body-copy-text-and-why */
  /* 16x0.81=13 */
}

q { /* quotes */
  quotes:
    "\201C" "\201D"
    "\2018" "\2019"

    "\201C" "\201D"
    "\2018" "\2019"

    "\201C" "\201D"
    "\2018" "\2019"
  ; /* quotes */

/* Two pairs: */
  quotes: ““” “”” “‘” “’”;
  font-style: italic;
  vertical-align: top;
  -webkit-box-decoration-break: clone;
  box-decoration-break: clone;
   /*
    - https://tympanus.net/codrops/css_reference/quotes/
    - https://developer.mozilla.org/en-US/docs/Web/CSS/quotes
  */
}
q::before {}
q::after
  { content: close-quote }

p q, q q {
  font-size: var(--smaller);
  padding-inline-end: initial;
  padding-inline-start: initial;
}
p q { }
q q { }

b[autocapitalize], p[autocapitalize=words], p[autocapitalize=characters], p[autocapitalize]::first-letter {
  color: ActiveText;
  font-weight: bold;
  font-size: calc( 100% * var(--GOLDEN-RATIO) );
}
p[autocapitalize=on]::first-letter {
  color: Canvas;
  display: flow-root;
  background: inherit;
}

[autocapitalize=words]{ text-transform: capitalize }
[autocapitalize=characters] { text-transform: uppercase }
[autocapitalize=off], [autocapitalize=none] { text-transform: none }

pre, code, kbd, samp {
  padding: 0 0.1618em;
  background-color:  ButtonFace;
}
pre {
  overflow: overlay;
  text-align: initial;
  margin: var(--p-margin);
}
code {
  white-space: initial;
}
pre code {
  margin: var(--line-height);
  font-size:  var(--smaller);
  font-size: smaller;
  white-space: break-spaces;
}
header code, h1 code {
  font-variant-caps: initial;
}

figcaption {
  font-size: 86%;
  font-style: italic;
}

/*
  - http://webtypography.net/2.3.3
  - https://isotropic.co/the-best-css-styling-for-blockquotes
  - https://css-tricks.com/snippets/css/simple-and-nice-blockquote-styling
*/
blockquote { /* http://webtypography.net/2.3.3 */
  opacity: 85%;
  font-style: italic;
  padding-block-start: 3ch;
  padding-block-end: 1.682ch;
  quotes: "\201C""\201D";
  border: 0.01618em solid;
  margin: var(--p-margin);
  font-size: var(--larger);
  margin-block-start: var(--line-height);
}
blockquote::before {
  top: 1ch;
  left: 2ch;
  /* width: 100%; */
  opacity: 80%;
  line-height: 1.6182ch;
  position: relative;
  content: open-quote;
  overflow: hidden;
  /* background: pink; */
  display: block;
  width: 1ch;
  height: 1ch;
  text-align: start;
  transform: scale(8);
}
blockquote::after {
  opacity: 40%;
  content: '⤷\2002' attr(cite);
}
blockquote p {
  text-align: start;
}
cite {
  opacity: 75%;
  font-size: var(--smaller);
  white-space: nowrap;
  display: inline-flex;
}
cite::before{
  content: '-'; /* https://en.wikipedia.org/wiki/Dash */
}
blockquote cite, q cite {}
blockquote::after, blockquote cite {
  display: block;
  text-align: end;
  font-size: var(--larger);
  margin: var(--margin-collapse-bugfix) 1.6821ch;
  padding: var(--margin-collapse-bugfix) 1.6821ch;
}
blockquote cite {
}
blockquote cite::before {
  content: normal;
}
q cite {
  max-width: 21ch;
  overflow: hidden;
  vertical-align: middle;
  text-overflow: ellipsis;
  font-size: var(--smallest);
}

small
  { font-size: var(--smaller) }

sub, sup { /* Prevent `sub` and `sup` elements from affecting the line height in all browsers. */
vertical-align: unset;
}
sup {
  position: relative;
  top: -.418em;
}
sub {
  position: relative;
  top: 0.418em;
}

svg
 { vertical-align: middle }

address { }
li address
  { margin: var(--margin-collapse-bugfix) }


/* Table styling */
table {
  font-size: small;
  margin: 1ch auto;
}
table::before, table::after {
  text-indent: 1ch;
  margin-inline: 1ch;
}
table::before { margin-block-start: 1ch }
table::after { margin-block-end: 1ch }

table > * { margin-inline: 1ch }
table tr > * {
  text-align: inherit;
  line-height: calc(1em * var(--GOLDEN-RATIO));
}
table tr::before, table tr::after,
table tr > *::before, table tr > *::after {
  font-size: smaller;
  text-align: center;
  white-space: nowrap;
  writing-mode: horizontal-tb;
  line-height: calc(1em * var(--GOLDEN-RATIO));
}
table tr > *::before { margin-right: 1ch }
table tr > *::after  { margin-left: 1ch }

table > thead, table > tfoot, table > tbody {}
/* ... */

